# my_graduation_thesis

a_to_action/: CMakeLists.txt  CMakeLists.txt~  package.xml
a_to_action/src/: a_to_action.cpp  a_to_action_repair.cpp  a_to_action_repair2.cpp  a_to_action_tis.cpp  sample_a_num_pub.cpp  sample_a_num_pub_repair.cpp
arm_action/: CMakeLists.txt  CMakeLists.txt~  package.xml
arm_action/src/: 192.168.0.167  arm_action.cpp  arm_action2.cpp  arm_action_repair.cpp  arm_action_repair2.cpp  sample_joint_pub.cpp  sample_joint_pub_repair.cpp
arm_control/: CMakeLists.txt  CMakeLists.txt~  package.xml
arm_control/src/: arm_control.cpp  arm_control_dxl.cpp  arm_control_repair.cpp  arm_control_repair2.cpp  arm_control_tis.cpp  sample_pub.cpp  sample_pub_repair.cpp  sample_pub_tis.cpp
epsilon_greedy/: CMakeLists.txt  CMakeLists.txt~  package.xml
epsilon_greedy/src/: argmax_demo.cpp  epsilon_greedy.cpp  sample_optimum_action_num_pub.cpp
joint_to_s/: CMakeLists.txt  CMakeLists.txt~  package.xml
joint_to_s/src/: joint_to_s.cpp  joint_to_s_server.cpp
joint_to_s/srv/: joint_state.srv  joint_state.srv~
position_decision/: CMakeLists.txt  CMakeLists.txt~  package.xml
position_decision/src/: position_decision.cpp  position_decision2.cpp  position_decision_repair.cpp  position_decision_repair2.cpp  position_decision_repair2_kai.cpp  position_decision_tis.cpp
q_update/: CMakeLists.txt  package.xml
q_update/scripts/: q_update_client_dqn.py  q_update_client_dqn2.py  q_update_client_dqn3.py  q_update_client_dqn4.py  q_update_client_dqn5.py  q_update_client_dqn6.py  q_update_client_python.py  q_update_client_python2.py  q_update_client_python3.py  q_update_client_repair.py  q_update_client_repair2.py  q_update_client_repair2_random.py  q_update_client_repair2_random2.py  q_update_client_repair2_random2_kai.py  q_update_client_repair2_random2_old.py  q_update_client_repair2_random_demo.py  q_update_client_repair2_random_demo_kai.py  q_update_client_repair2_random_demo_kai2.py  q_update_client_repair2_random_demo_kai_mfi.py  q_update_client_repair2_random_demo_kai_old.py  q_update_client_repair2_random_demo_old.py  q_update_client_repair2_random_evoluation.py  q_update_client_repair2_random_evoluation_differential_mfi.py  q_update_client_repair2_random_evoluation_mfi.py  q_update_client_tis.py  q_update_client_tis_dxl.py  q_update_demo_dqn.py  q_update_demo_dqn2.py  q_update_demo_dqn3.py  q_update_demo_python.py  q_update_demo_repair.py  q_update_demo_tis.py  q_update_demo_tis_dxl.py  q_update_experience_replay.py  q_update_my_custom_learning.py  q_update_my_replay.py  q_update_old_method.py  q_update_old_method_2.py  q_update_old_method_3.py  q_update_old_method_3_kai.py  (+6 more)
q_update/src/: q_update.cpp  q_update_client.cpp  q_update_client2.cpp  q_update_client3.cpp  q_update_client4.cpp  q_update_client5.cpp  q_update_client6.cpp  q_update_csv.cpp  q_update_csv.cpp~  q_update_demo.cpp  q_update_demo2.cpp  q_update_demo3.cpp  sample_client.cpp  sample_q_update.cpp  sample_set_link.cpp
reward_calculation/: CMakeLists.txt  CMakeLists.txt~  package.xml
reward_calculation/src/: reward_calculation.cpp  reward_calculation_distance.cpp  reward_calculation_distance_2.cpp  reward_calculation_distance_only.cpp  reward_calculation_sample.cpp  reward_calculation_server.cpp  reward_calculation_server2.cpp  reward_calculation_server_demo.cpp  reward_calculation_server_demo2.cpp  reward_calculation_server_repair.cpp  reward_calculation_server_repair2.cpp  reward_calculation_server_repair2_random.cpp  reward_calculation_server_repair2_random2.cpp  reward_calculation_server_tis.cpp  reward_client.cpp
reward_calculation/srv/: reward.srv
s_to_joint/: CMakeLists.txt~  package.xml
s_to_joint/src/: s_to_joint.cpp  sample_s_to_joint.cpp
